--- a/src/index.html
+++ b/src/index.html
@@ -25,4 +25,24 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.4/js/mdb.min.js"></script>
+    <!-- Charts dashboard -->
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="assets/js/jquery.vmap.js" type="text/javascript"></script>
+    <script src="assets/js/jquery.vmap.france.js" type="text/javascript"></script>
+    <script src="assets/js/jquery.vmap.colorsFrance.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+          $('#francemap').vectorMap({
+              map: 'france_fr',
+              hoverOpacity: 0.5,
+              hoverColor: false,
+              backgroundColor: "#ffffff",
+              colors: couleurs,
+              borderColor: "#000000",
+              selectedColor: "#EC0000",
+              enableZoom: false,
+              showTooltip: true
+          });
+      });
+  </script>
 </html>
