--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.4/js/mdb.min.js"></script>
     <!-- Charts dashboard -->
-    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script> -->
     <script src="assets/js/jquery.vmap.js" type="text/javascript"></script>
     <script src="assets/js/jquery.vmap.france.js" type="text/javascript"></script>
     <script src="assets/js/jquery.vmap.colorsFrance.js" type="text/javascript"></script>
