--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <title>ProjetDashboardSmartleadsAngular</title>
+    <title>Projet Dashboard Smartleads Angular</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,9 +14,11 @@
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.4/css/mdb.min.css" rel="stylesheet">
   </head>
+
   <body>
     <app-root></app-root>
   </body>
+
   <!-- JQuery -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Bootstrap tooltips -->
@@ -25,24 +27,6 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.4/js/mdb.min.js"></script>
-    <!-- Charts dashboard -->
-    <script src="assets/js/apexcharts.js" type="text/javascript"></script>
-    <script src="assets/js/jquery.vmap.js" type="text/javascript"></script>
-    <script src="assets/js/jquery.vmap.france.js" type="text/javascript"></script>
-    <script src="assets/js/jquery.vmap.colorsFrance.js" type="text/javascript"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-          $('#francemap').vectorMap({
-              map: 'france_fr',
-              hoverOpacity: 0.5,
-              hoverColor: false,
-              backgroundColor: "#ffffff",
-              colors: couleurs,
-              borderColor: "#000000",
-              selectedColor: "#EC0000",
-              enableZoom: false,
-              showTooltip: true
-          });
-      });
-  </script>
+  <!-- Charts dashboard -->
+  <script src="assets/js/apexcharts.js" type="text/javascript"></script>
 </html>
